# MyEngine

./: .clang_complete  .gitignore  CMakeLists.txt  Makefile  Material.cpp  Material.hpp  Object.cpp  Object.hpp  README.md  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Triangle.cpp  Triangle.hpp  Window.cpp  Window.hpp  cmake.txt  main.cpp
GLItem/: Buffer.cpp  Mesh.cpp  Mesh.hpp
Mxe/: MaterialManager.hpp  ShaderManager.cpp  ShaderManager.hpp
Mxe/Renderer/: ObjectRenderer.cpp  ObjectRenderer.hpp  ObjectsToDrawCallback.cpp  ObjectsToDrawCallback.hpp
Scene/: CameraFPS.cpp  CameraFPS.hpp  ICamera.hpp  INode.cpp  INode.hpp  SceneManager.cpp  SceneManager.hpp
Scene/Object/: Wavefront.cpp  Wavefront.hpp
Utils/: FrameCounter.hpp  MemoryManager.hpp
cmake_modules/: FindFreetype.cmake  FindGLEW.cmake  FindSDL2.cmake  Findassimp.cmake
include/GLItem/: Buffer.hpp
include/fse/: Export.hpp  Material.hpp  ShaderManager.hpp  Window.hpp
include/fse/Extra/: stb_image.h
include/fse/GLItem/: Buffer.hpp  Mesh.hpp  Shader.hpp  Texture.hpp
include/fse/Renderer/: ObjectPicker.hpp  ObjectRenderer.hpp  Renderer.hpp  (+2 more)
lib/: fse.lib
shader/: basic.fragment  basic.vert  basic_light.frag  basic_light.fragment  basic_light.vert
source/: Material.cpp  ShaderManager.cpp  Window.cpp  main.cpp
source/GLItem/: Buffer.cpp  Mesh.cpp  Shader.cpp  Texture.cpp
source/Renderer/: ObjectPicker.cpp  ObjectRenderer.cpp  ObjectsToDrawCallback.cpp  Renderer.cpp  TextureRenderer.cpp
source/Scene/: CameraFPS.cpp  DynamicScene.cpp  INode.cpp  Light.cpp  SceneManager.cpp
source/Ui/: Button.cpp  Drawer.cpp  Layout.cpp  LayoutHorizontal.cpp  LayoutVertical.cpp  Surface.cpp  Text.cpp
(+20 files in other folders)
